Assignment_2/a2.output
Grammar

    0 $accept: program $end

    1 program: functionDefinitions mainFunction

    2 functionDefinitions: functionDefinitions functionDefinition
    3                    | /* empty */

    4 mainFunction: validType mainIdentifier OPEN_PAREN parameters CLOSE_PAREN body

    5 mainIdentifier: MAIN

    6 lines: line
    7      | line lines

    8 line: declarationStatement
    9     | assignmentStatement
   10     | expression SEMI_COLON
   11     | returnStatement
   12     | ifStatement
   13     | loopStatement
   14     | functionDefinition

   15 declarationStatement: validType declarations SEMI_COLON

   16 declarations: declaration
   17             | declaration COMMA declarations

   18 declaration: assignable EQ expression
   19            | assignable

   20 assignmentStatement: assignable EQ expression SEMI_COLON

   21 assignable: identifier
   22           | identifier subscripts

   23 subscripts: subscript
   24           | subscript subscripts

   25 subscript: OPEN_SQUARE index CLOSE_SQUARE

   26 functionCall: identifier OPEN_PAREN arguments CLOSE_PAREN

   27 arguments: argument
   28          | argument COMMA arguments
   29          | /* empty */

   30 argument: expression
   31         | STRING_TOK

   32 expression: expression PLUS_TOK expression
   33           | expression MINUS_TOK expression
   34           | expression COMPAR expression
   35           | expression MULTIPLY_TOK expression
   36           | expression DIVIDE_TOK expression
   37           | expression EXPONENT_TOK expression
   38           | MINUS_TOK expression
   39           | OPEN_PAREN expression CLOSE_PAREN
   40           | functionCall
   41           | term

   42 functionDefinition: validType identifier OPEN_PAREN parameters CLOSE_PAREN body

   43 returnStatement: RETURN_TOK expression SEMI_COLON
   44                | RETURN_TOK SEMI_COLON

   45 parameters: parameter
   46           | parameter COMMA parameters
   47           | /* empty */

   48 parameter: validType assignable

   49 ifStatement: IF_TOK OPEN_PAREN expression CLOSE_PAREN body ELSE_TOK body
   50            | IF_TOK OPEN_PAREN expression CLOSE_PAREN body

   51 loopStatement: whileStatement
   52              | forStatement

   53 whileStatement: WHILE_TOK OPEN_PAREN expression CLOSE_PAREN body

   54 forStatement: FOR_TOK OPEN_PAREN assignmentStatement expression SEMI_COLON assignable EQ expression CLOSE_PAREN body

   55 body: line
   56     | OPEN_BRACE lines CLOSE_BRACE

   57 term: identifier
   58     | identifier subscripts
   59     | NUMBER

   60 index: identifier
   61      | NUMBER

   62 validType: VALID_TYPE

   63 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
OPEN_PAREN (258) 4 26 39 42 49 50 53 54
CLOSE_PAREN (259) 4 26 39 42 49 50 53 54
OPEN_BRACE (260) 56
CLOSE_BRACE (261) 56
OPEN_SQUARE (262) 25
CLOSE_SQUARE (263) 25
COMMA (264) 17 28 46
COMPAR (265) 34
SEMI_COLON (266) 10 15 20 43 44 54
EQ (267) 18 20 54
PLUS_TOK (268) 32
MINUS_TOK (269) 33 38
MULTIPLY_TOK (270) 35
DIVIDE_TOK (271) 36
EXPONENT_TOK (272) 37
VALID_TYPE (273) 62
IDENTIFIER (274) 63
NUMBER (275) 59 61
STRING_TOK (276) 31
IF_TOK (277) 49 50
ELSE_TOK (278) 49
WHILE_TOK (279) 53
FOR_TOK (280) 54
RETURN_TOK (281) 43 44
MAIN (282) 5
UMINUS (283)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
functionDefinitions (31)
    on left: 2 3, on right: 1 2
mainFunction (32)
    on left: 4, on right: 1
mainIdentifier (33)
    on left: 5, on right: 4
lines (34)
    on left: 6 7, on right: 7 56
line (35)
    on left: 8 9 10 11 12 13 14, on right: 6 7 55
declarationStatement (36)
    on left: 15, on right: 8
declarations (37)
    on left: 16 17, on right: 15 17
declaration (38)
    on left: 18 19, on right: 16 17
assignmentStatement (39)
    on left: 20, on right: 9 54
assignable (40)
    on left: 21 22, on right: 18 19 20 48 54
subscripts (41)
    on left: 23 24, on right: 22 24 58
subscript (42)
    on left: 25, on right: 23 24
functionCall (43)
    on left: 26, on right: 40
arguments (44)
    on left: 27 28 29, on right: 26 28
argument (45)
    on left: 30 31, on right: 27 28
expression (46)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 10 18 20 30 32
    33 34 35 36 37 38 39 43 49 50 53 54
functionDefinition (47)
    on left: 42, on right: 2 14
returnStatement (48)
    on left: 43 44, on right: 11
parameters (49)
    on left: 45 46 47, on right: 4 42 46
parameter (50)
    on left: 48, on right: 45 46
ifStatement (51)
    on left: 49 50, on right: 12
loopStatement (52)
    on left: 51 52, on right: 13
whileStatement (53)
    on left: 53, on right: 51
forStatement (54)
    on left: 54, on right: 52
body (55)
    on left: 55 56, on right: 4 42 49 50 53 54
term (56)
    on left: 57 58 59, on right: 41
index (57)
    on left: 60 61, on right: 25
validType (58)
    on left: 62, on right: 4 15 42 48
identifier (59)
    on left: 63, on right: 21 22 26 42 57 58 60


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (functionDefinitions)

    program              go to state 1
    functionDefinitions  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: functionDefinitions . mainFunction
    2 functionDefinitions: functionDefinitions . functionDefinition

    VALID_TYPE  shift, and go to state 4

    mainFunction        go to state 5
    functionDefinition  go to state 6
    validType           go to state 7


state 3

    0 $accept: program $end .

    $default  accept


state 4

   62 validType: VALID_TYPE .

    $default  reduce using rule 62 (validType)


state 5

    1 program: functionDefinitions mainFunction .

    $default  reduce using rule 1 (program)


state 6

    2 functionDefinitions: functionDefinitions functionDefinition .

    $default  reduce using rule 2 (functionDefinitions)


state 7

    4 mainFunction: validType . mainIdentifier OPEN_PAREN parameters CLOSE_PAREN body
   42 functionDefinition: validType . identifier OPEN_PAREN parameters CLOSE_PAREN body

    IDENTIFIER  shift, and go to state 8
    MAIN        shift, and go to state 9

    mainIdentifier  go to state 10
    identifier      go to state 11


state 8

   63 identifier: IDENTIFIER .

    $default  reduce using rule 63 (identifier)


state 9

    5 mainIdentifier: MAIN .

    $default  reduce using rule 5 (mainIdentifier)


state 10

    4 mainFunction: validType mainIdentifier . OPEN_PAREN parameters CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 12


state 11

   42 functionDefinition: validType identifier . OPEN_PAREN parameters CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 13


state 12

    4 mainFunction: validType mainIdentifier OPEN_PAREN . parameters CLOSE_PAREN body

    VALID_TYPE  shift, and go to state 4

    $default  reduce using rule 47 (parameters)

    parameters  go to state 14
    parameter   go to state 15
    validType   go to state 16


state 13

   42 functionDefinition: validType identifier OPEN_PAREN . parameters CLOSE_PAREN body

    VALID_TYPE  shift, and go to state 4

    $default  reduce using rule 47 (parameters)

    parameters  go to state 17
    parameter   go to state 15
    validType   go to state 16


state 14

    4 mainFunction: validType mainIdentifier OPEN_PAREN parameters . CLOSE_PAREN body

    CLOSE_PAREN  shift, and go to state 18


state 15

   45 parameters: parameter .
   46           | parameter . COMMA parameters

    COMMA  shift, and go to state 19

    $default  reduce using rule 45 (parameters)


state 16

   48 parameter: validType . assignable

    IDENTIFIER  shift, and go to state 8

    assignable  go to state 20
    identifier  go to state 21


state 17

   42 functionDefinition: validType identifier OPEN_PAREN parameters . CLOSE_PAREN body

    CLOSE_PAREN  shift, and go to state 22


state 18

    4 mainFunction: validType mainIdentifier OPEN_PAREN parameters CLOSE_PAREN . body

    OPEN_PAREN  shift, and go to state 23
    OPEN_BRACE  shift, and go to state 24
    MINUS_TOK   shift, and go to state 25
    VALID_TYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    IF_TOK      shift, and go to state 27
    WHILE_TOK   shift, and go to state 28
    FOR_TOK     shift, and go to state 29
    RETURN_TOK  shift, and go to state 30

    line                  go to state 31
    declarationStatement  go to state 32
    assignmentStatement   go to state 33
    assignable            go to state 34
    functionCall          go to state 35
    expression            go to state 36
    functionDefinition    go to state 37
    returnStatement       go to state 38
    ifStatement           go to state 39
    loopStatement         go to state 40
    whileStatement        go to state 41
    forStatement          go to state 42
    body                  go to state 43
    term                  go to state 44
    validType             go to state 45
    identifier            go to state 46


state 19

   46 parameters: parameter COMMA . parameters

    VALID_TYPE  shift, and go to state 4

    $default  reduce using rule 47 (parameters)

    parameters  go to state 47
    parameter   go to state 15
    validType   go to state 16


state 20

   48 parameter: validType assignable .

    $default  reduce using rule 48 (parameter)


state 21

   21 assignable: identifier .
   22           | identifier . subscripts

    OPEN_SQUARE  shift, and go to state 48

    $default  reduce using rule 21 (assignable)

    subscripts  go to state 49
    subscript   go to state 50


state 22

   42 functionDefinition: validType identifier OPEN_PAREN parameters CLOSE_PAREN . body

    OPEN_PAREN  shift, and go to state 23
    OPEN_BRACE  shift, and go to state 24
    MINUS_TOK   shift, and go to state 25
    VALID_TYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    IF_TOK      shift, and go to state 27
    WHILE_TOK   shift, and go to state 28
    FOR_TOK     shift, and go to state 29
    RETURN_TOK  shift, and go to state 30

    line                  go to state 31
    declarationStatement  go to state 32
    assignmentStatement   go to state 33
    assignable            go to state 34
    functionCall          go to state 35
    expression            go to state 36
    functionDefinition    go to state 37
    returnStatement       go to state 38
    ifStatement           go to state 39
    loopStatement         go to state 40
    whileStatement        go to state 41
    forStatement          go to state 42
    body                  go to state 51
    term                  go to state 44
    validType             go to state 45
    identifier            go to state 46


state 23

   39 expression: OPEN_PAREN . expression CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 52
    term          go to state 44
    identifier    go to state 53


state 24

   56 body: OPEN_BRACE . lines CLOSE_BRACE

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    VALID_TYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    IF_TOK      shift, and go to state 27
    WHILE_TOK   shift, and go to state 28
    FOR_TOK     shift, and go to state 29
    RETURN_TOK  shift, and go to state 30

    lines                 go to state 54
    line                  go to state 55
    declarationStatement  go to state 32
    assignmentStatement   go to state 33
    assignable            go to state 34
    functionCall          go to state 35
    expression            go to state 36
    functionDefinition    go to state 37
    returnStatement       go to state 38
    ifStatement           go to state 39
    loopStatement         go to state 40
    whileStatement        go to state 41
    forStatement          go to state 42
    term                  go to state 44
    validType             go to state 45
    identifier            go to state 46


state 25

   38 expression: MINUS_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 56
    term          go to state 44
    identifier    go to state 53


state 26

   59 term: NUMBER .

    $default  reduce using rule 59 (term)


state 27

   49 ifStatement: IF_TOK . OPEN_PAREN expression CLOSE_PAREN body ELSE_TOK body
   50            | IF_TOK . OPEN_PAREN expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 57


state 28

   53 whileStatement: WHILE_TOK . OPEN_PAREN expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 58


state 29

   54 forStatement: FOR_TOK . OPEN_PAREN assignmentStatement expression SEMI_COLON assignable EQ expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 59


state 30

   43 returnStatement: RETURN_TOK . expression SEMI_COLON
   44                | RETURN_TOK . SEMI_COLON

    OPEN_PAREN  shift, and go to state 23
    SEMI_COLON  shift, and go to state 60
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 61
    term          go to state 44
    identifier    go to state 53


state 31

   55 body: line .

    $default  reduce using rule 55 (body)


state 32

    8 line: declarationStatement .

    $default  reduce using rule 8 (line)


state 33

    9 line: assignmentStatement .

    $default  reduce using rule 9 (line)


state 34

   20 assignmentStatement: assignable . EQ expression SEMI_COLON

    EQ  shift, and go to state 62


state 35

   40 expression: functionCall .

    $default  reduce using rule 40 (expression)


state 36

   10 line: expression . SEMI_COLON
   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    COMPAR        shift, and go to state 63
    SEMI_COLON    shift, and go to state 64
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 37

   14 line: functionDefinition .

    $default  reduce using rule 14 (line)


state 38

   11 line: returnStatement .

    $default  reduce using rule 11 (line)


state 39

   12 line: ifStatement .

    $default  reduce using rule 12 (line)


state 40

   13 line: loopStatement .

    $default  reduce using rule 13 (line)


state 41

   51 loopStatement: whileStatement .

    $default  reduce using rule 51 (loopStatement)


state 42

   52 loopStatement: forStatement .

    $default  reduce using rule 52 (loopStatement)


state 43

    4 mainFunction: validType mainIdentifier OPEN_PAREN parameters CLOSE_PAREN body .

    $default  reduce using rule 4 (mainFunction)


state 44

   41 expression: term .

    $default  reduce using rule 41 (expression)


state 45

   15 declarationStatement: validType . declarations SEMI_COLON
   42 functionDefinition: validType . identifier OPEN_PAREN parameters CLOSE_PAREN body

    IDENTIFIER  shift, and go to state 8

    declarations  go to state 70
    declaration   go to state 71
    assignable    go to state 72
    identifier    go to state 73


state 46

   21 assignable: identifier .
   22           | identifier . subscripts
   26 functionCall: identifier . OPEN_PAREN arguments CLOSE_PAREN
   57 term: identifier .
   58     | identifier . subscripts

    OPEN_PAREN   shift, and go to state 74
    OPEN_SQUARE  shift, and go to state 48

    EQ        reduce using rule 21 (assignable)
    $default  reduce using rule 57 (term)

    subscripts  go to state 75
    subscript   go to state 50


state 47

   46 parameters: parameter COMMA parameters .

    $default  reduce using rule 46 (parameters)


state 48

   25 subscript: OPEN_SQUARE . index CLOSE_SQUARE

    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 76

    index       go to state 77
    identifier  go to state 78


state 49

   22 assignable: identifier subscripts .

    $default  reduce using rule 22 (assignable)


state 50

   23 subscripts: subscript .
   24           | subscript . subscripts

    OPEN_SQUARE  shift, and go to state 48

    $default  reduce using rule 23 (subscripts)

    subscripts  go to state 79
    subscript   go to state 50


state 51

   42 functionDefinition: validType identifier OPEN_PAREN parameters CLOSE_PAREN body .

    $default  reduce using rule 42 (functionDefinition)


state 52

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   39           | OPEN_PAREN expression . CLOSE_PAREN

    CLOSE_PAREN   shift, and go to state 80
    COMPAR        shift, and go to state 63
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 53

   26 functionCall: identifier . OPEN_PAREN arguments CLOSE_PAREN
   57 term: identifier .
   58     | identifier . subscripts

    OPEN_PAREN   shift, and go to state 74
    OPEN_SQUARE  shift, and go to state 48

    $default  reduce using rule 57 (term)

    subscripts  go to state 81
    subscript   go to state 50


state 54

   56 body: OPEN_BRACE lines . CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 82


state 55

    6 lines: line .
    7      | line . lines

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    VALID_TYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    IF_TOK      shift, and go to state 27
    WHILE_TOK   shift, and go to state 28
    FOR_TOK     shift, and go to state 29
    RETURN_TOK  shift, and go to state 30

    $default  reduce using rule 6 (lines)

    lines                 go to state 83
    line                  go to state 55
    declarationStatement  go to state 32
    assignmentStatement   go to state 33
    assignable            go to state 34
    functionCall          go to state 35
    expression            go to state 36
    functionDefinition    go to state 37
    returnStatement       go to state 38
    ifStatement           go to state 39
    loopStatement         go to state 40
    whileStatement        go to state 41
    forStatement          go to state 42
    term                  go to state 44
    validType             go to state 45
    identifier            go to state 46


state 56

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   38           | MINUS_TOK expression .

    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 38 (expression)


state 57

   49 ifStatement: IF_TOK OPEN_PAREN . expression CLOSE_PAREN body ELSE_TOK body
   50            | IF_TOK OPEN_PAREN . expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 84
    term          go to state 44
    identifier    go to state 53


state 58

   53 whileStatement: WHILE_TOK OPEN_PAREN . expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 85
    term          go to state 44
    identifier    go to state 53


state 59

   54 forStatement: FOR_TOK OPEN_PAREN . assignmentStatement expression SEMI_COLON assignable EQ expression CLOSE_PAREN body

    IDENTIFIER  shift, and go to state 8

    assignmentStatement  go to state 86
    assignable           go to state 34
    identifier           go to state 21


state 60

   44 returnStatement: RETURN_TOK SEMI_COLON .

    $default  reduce using rule 44 (returnStatement)


state 61

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   43 returnStatement: RETURN_TOK expression . SEMI_COLON

    COMPAR        shift, and go to state 63
    SEMI_COLON    shift, and go to state 87
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 62

   20 assignmentStatement: assignable EQ . expression SEMI_COLON

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 88
    term          go to state 44
    identifier    go to state 53


state 63

   34 expression: expression COMPAR . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 89
    term          go to state 44
    identifier    go to state 53


state 64

   10 line: expression SEMI_COLON .

    $default  reduce using rule 10 (line)


state 65

   32 expression: expression PLUS_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 90
    term          go to state 44
    identifier    go to state 53


state 66

   33 expression: expression MINUS_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 91
    term          go to state 44
    identifier    go to state 53


state 67

   35 expression: expression MULTIPLY_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 92
    term          go to state 44
    identifier    go to state 53


state 68

   36 expression: expression DIVIDE_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 93
    term          go to state 44
    identifier    go to state 53


state 69

   37 expression: expression EXPONENT_TOK . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 94
    term          go to state 44
    identifier    go to state 53


state 70

   15 declarationStatement: validType declarations . SEMI_COLON

    SEMI_COLON  shift, and go to state 95


state 71

   16 declarations: declaration .
   17             | declaration . COMMA declarations

    COMMA  shift, and go to state 96

    $default  reduce using rule 16 (declarations)


state 72

   18 declaration: assignable . EQ expression
   19            | assignable .

    EQ  shift, and go to state 97

    $default  reduce using rule 19 (declaration)


state 73

   21 assignable: identifier .
   22           | identifier . subscripts
   42 functionDefinition: validType identifier . OPEN_PAREN parameters CLOSE_PAREN body

    OPEN_PAREN   shift, and go to state 13
    OPEN_SQUARE  shift, and go to state 48

    $default  reduce using rule 21 (assignable)

    subscripts  go to state 49
    subscript   go to state 50


state 74

   26 functionCall: identifier OPEN_PAREN . arguments CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    STRING_TOK  shift, and go to state 98

    $default  reduce using rule 29 (arguments)

    functionCall  go to state 35
    arguments     go to state 99
    argument      go to state 100
    expression    go to state 101
    term          go to state 44
    identifier    go to state 53


state 75

   22 assignable: identifier subscripts .
   58 term: identifier subscripts .

    EQ        reduce using rule 22 (assignable)
    $default  reduce using rule 58 (term)


state 76

   61 index: NUMBER .

    $default  reduce using rule 61 (index)


state 77

   25 subscript: OPEN_SQUARE index . CLOSE_SQUARE

    CLOSE_SQUARE  shift, and go to state 102


state 78

   60 index: identifier .

    $default  reduce using rule 60 (index)


state 79

   24 subscripts: subscript subscripts .

    $default  reduce using rule 24 (subscripts)


state 80

   39 expression: OPEN_PAREN expression CLOSE_PAREN .

    $default  reduce using rule 39 (expression)


state 81

   58 term: identifier subscripts .

    $default  reduce using rule 58 (term)


state 82

   56 body: OPEN_BRACE lines CLOSE_BRACE .

    $default  reduce using rule 56 (body)


state 83

    7 lines: line lines .

    $default  reduce using rule 7 (lines)


state 84

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   49 ifStatement: IF_TOK OPEN_PAREN expression . CLOSE_PAREN body ELSE_TOK body
   50            | IF_TOK OPEN_PAREN expression . CLOSE_PAREN body

    CLOSE_PAREN   shift, and go to state 103
    COMPAR        shift, and go to state 63
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 85

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   53 whileStatement: WHILE_TOK OPEN_PAREN expression . CLOSE_PAREN body

    CLOSE_PAREN   shift, and go to state 104
    COMPAR        shift, and go to state 63
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 86

   54 forStatement: FOR_TOK OPEN_PAREN assignmentStatement . expression SEMI_COLON assignable EQ expression CLOSE_PAREN body

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 105
    term          go to state 44
    identifier    go to state 53


state 87

   43 returnStatement: RETURN_TOK expression SEMI_COLON .

    $default  reduce using rule 43 (returnStatement)


state 88

   20 assignmentStatement: assignable EQ expression . SEMI_COLON
   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    COMPAR        shift, and go to state 63
    SEMI_COLON    shift, and go to state 106
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69


state 89

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   34           | expression COMPAR expression .
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 34 (expression)


state 90

   32 expression: expression . PLUS_TOK expression
   32           | expression PLUS_TOK expression .
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 32 (expression)


state 91

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   33           | expression MINUS_TOK expression .
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 33 (expression)


state 92

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   35           | expression MULTIPLY_TOK expression .
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 35 (expression)


state 93

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   36           | expression DIVIDE_TOK expression .
   37           | expression . EXPONENT_TOK expression

    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 36 (expression)


state 94

   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression
   37           | expression EXPONENT_TOK expression .

    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 37 (expression)


state 95

   15 declarationStatement: validType declarations SEMI_COLON .

    $default  reduce using rule 15 (declarationStatement)


state 96

   17 declarations: declaration COMMA . declarations

    IDENTIFIER  shift, and go to state 8

    declarations  go to state 107
    declaration   go to state 71
    assignable    go to state 72
    identifier    go to state 21


state 97

   18 declaration: assignable EQ . expression

    OPEN_PAREN  shift, and go to state 23
    MINUS_TOK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26

    functionCall  go to state 35
    expression    go to state 108
    term          go to state 44
    identifier    go to state 53


state 98

   31 argument: STRING_TOK .

    $default  reduce using rule 31 (argument)


state 99

   26 functionCall: identifier OPEN_PAREN arguments . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 109


state 100

   27 arguments: argument .
   28          | argument . COMMA arguments

    COMMA  shift, and go to state 110

    $default  reduce using rule 27 (arguments)


state 101

   30 argument: expression .
   32 expression: expression . PLUS_TOK expression
   33           | expression . MINUS_TOK expression
   34           | expression . COMPAR expression
   35           | expression . MULTIPLY_TOK expression
   36           | expression . DIVIDE_TOK expression
   37           | expression . EXPONENT_TOK expression

    COMPAR        shift, and go to state 63
    PLUS_TOK      shift, and go to state 65
    MINUS_TOK     shift, and go to state 66
    MULTIPLY_TOK  shift, and go to state 67
    DIVIDE_TOK    shift, and go to state 68
    EXPONENT_TOK  shift, and go to state 69

    $default  reduce using rule 30 (argument)


state 102

   25 subscript: OPEN_SQUARE index CLOSE_SQUARE .

    $default  reduce using rule 25 (subscript)


state 103

   49 ifStatement: IF_TOK OPEN_PAREN expression CLOSE_PAREN . body ELSE_TOK body
   50            | IF_TOK OPEN_PAREN expression CLOSE_PAREN . body

    OPEN_PAREN  shift, and go to state 23
    OPEN_BRACE  shift, and go to state 24
    MINUS_TOK   shift, and go to state 25
    VALID_TYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 8
    NUMBER      shift, and go to state 26
    IF_TOK      shift, and go to state 27
    WHILE_TOK   shift, and go to state 28
    FOR_TOK     shift, and go to state 29
    RETURN_TOK  shift, and go to state 30
